kubernetes/manifests/kustomize/istio-gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  parentRefs:
    - name: internal
  hostnames:
    - longhorn.internal.dev.tomnowak.work
  rules:
    - backendRefs:
        - name: longhorn-frontend.longhorn.svc
          port: 80
